# rotating-equipment-pdm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pdm/app/: streamlit_app.py
src/pdm/data/: load.py  load_cmapss.py
src/pdm/features/: rolling.py
src/pdm/models/: anomaly.py
