[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rotating-equipment-pdm"
version = "0.1.0"
description = "Predictive maintenance for rotating equipment"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
